Refactored how the nodes are found and stored.